SCRUMDEMO-158:some more issues fixes